--- a/storeApplication/src/main/resources/templates/storeUser.html
+++ b/storeApplication/src/main/resources/templates/storeUser.html
@@ -9,5 +9,17 @@
     <form action="/logout" method="get">
         <button type="submit">Se déconnecter</button>
     </form>
+    <br>
+    <h1>Liste des commandes</h1>
+    <ul>
+        <li th:each="commande : ${commandes}">
+            <a th:href="@{/store/commande/{id}(id=${commande.id})}" th:text="${commande.titre}"></a>
+        </li>
+    </ul>
+    <br>
+    <form action="/createCommande" method="post">
+        Titre de la commande : <input name="titre" required>
+        <input type="SUBMIT">
+    </form>
 </body>
 </html>
